--- a/docs/parenting_under_pressure.tex
+++ b/docs/parenting_under_pressure.tex
@@ -90,6 +90,8 @@
 \hypertarget{introduction}{%
 \chapter{Introduction}\label{introduction}}
 
+Testing
+
 \bibliography{book.bib,packages.bib,ref.bib}
 
 \end{document}
