--- a/docs/parenting_under_pressure.tex
+++ b/docs/parenting_under_pressure.tex
@@ -78,7 +78,7 @@
 
 \title{Parenting Under Pressure}
 \author{Bridget Callaghan, Kristen Chu, Emily Towner}
-\date{2020-05-04}
+\date{2020-05-07}
 
 \begin{document}
 \maketitle
@@ -89,6 +89,373 @@
 }
 \hypertarget{introduction}{%
 \chapter{Introduction}\label{introduction}}
+
+\hypertarget{methods}{%
+\chapter{Methods}\label{methods}}
+
+\hypertarget{measures}{%
+\section{Measures}\label{measures}}
+
+\hypertarget{information}{%
+\subsection{Information}\label{information}}
+
+\begin{longtable}[]{@{}llll@{}}
+\toprule
+\begin{minipage}[b]{0.22\columnwidth}\raggedright
+Title\strut
+\end{minipage} & \begin{minipage}[b]{0.27\columnwidth}\raggedright
+Description\strut
+\end{minipage} & \begin{minipage}[b]{0.22\columnwidth}\raggedright
+Reference\strut
+\end{minipage} & \begin{minipage}[b]{0.18\columnwidth}\raggedright
+\strut
+\end{minipage}\tabularnewline
+\midrule
+\endhead
+\begin{minipage}[t]{0.22\columnwidth}\raggedright
+COVID-19 Information\strut
+\end{minipage} & \begin{minipage}[t]{0.27\columnwidth}\raggedright
+This questionnaire consists of 12 items to identify health changes and lifestyle changes made from the impacts of the COVID-19 outbreak.\strut
+\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
+Made by BABLab; adapted from the CASPE- parent (Lacouceur, 2020), the Combined COVID Health Emotional Lifestyle Changes (Pfiefer, 2020), and the COVID Lifestyle Changes (Pfiefer, 2020)\strut
+\end{minipage} & \begin{minipage}[t]{0.18\columnwidth}\raggedright
+\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.22\columnwidth}\raggedright
+Demographics\strut
+\end{minipage} & \begin{minipage}[t]{0.27\columnwidth}\raggedright
+This questionnaire consists of 23 items to identify the child's age, caregiver information, parental socioeconomic status, underlying health conditions, and geographic location. This questionnaire also contains the MacArthur Scale of Subjective Social Status, which assesses the sense of social status across factors of socioeconomic status by asking individuals to place an ``X'' on the area of the ``social ladder'' they feel they most identify.\strut
+\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
+(Adler et al., 2000)\strut
+\end{minipage} & \begin{minipage}[t]{0.18\columnwidth}\raggedright
+\strut
+\end{minipage}\tabularnewline
+\bottomrule
+\end{longtable}
+
+\hypertarget{affect}{%
+\subsection{Affect}\label{affect}}
+
+\begin{longtable}[]{@{}llll@{}}
+\toprule
+\begin{minipage}[b]{0.22\columnwidth}\raggedright
+Title\strut
+\end{minipage} & \begin{minipage}[b]{0.27\columnwidth}\raggedright
+Name\strut
+\end{minipage} & \begin{minipage}[b]{0.22\columnwidth}\raggedright
+Description\strut
+\end{minipage} & \begin{minipage}[b]{0.18\columnwidth}\raggedright
+Reference\strut
+\end{minipage}\tabularnewline
+\midrule
+\endhead
+\begin{minipage}[t]{0.22\columnwidth}\raggedright
+PANAS\strut
+\end{minipage} & \begin{minipage}[t]{0.27\columnwidth}\raggedright
+Positive and Negative Affect Schedule- Parent Self-Report\strut
+\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
+This self-report questionnaire consists of 20 items measuring both positive and negative affect. The questionnaire asks participants to rate each item on a 5-point scale of 1 (not at all) to 5 (very much) indicating the way they have felt over the past week.\strut
+\end{minipage} & \begin{minipage}[t]{0.18\columnwidth}\raggedright
+(Watson et al., 1988)\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.22\columnwidth}\raggedright
+Written Reponse\strut
+\end{minipage} & \begin{minipage}[t]{0.27\columnwidth}\raggedright
+COVID-19 Written Response- Parent\strut
+\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
+This self-report measure consists of one long-form qualitative response, prompting a parent to write continuously for five minutes about the impacts of COVID-19 on their life and family.\strut
+\end{minipage} & \begin{minipage}[t]{0.18\columnwidth}\raggedright
+Made by BABLab; adapted from (Pennebaker, 1997)\strut
+\end{minipage}\tabularnewline
+\bottomrule
+\end{longtable}
+
+\hypertarget{anxiety}{%
+\subsection{Anxiety}\label{anxiety}}
+
+\begin{longtable}[]{@{}llll@{}}
+\toprule
+\begin{minipage}[b]{0.22\columnwidth}\raggedright
+Title\strut
+\end{minipage} & \begin{minipage}[b]{0.27\columnwidth}\raggedright
+Name\strut
+\end{minipage} & \begin{minipage}[b]{0.22\columnwidth}\raggedright
+Description\strut
+\end{minipage} & \begin{minipage}[b]{0.18\columnwidth}\raggedright
+Reference\strut
+\end{minipage}\tabularnewline
+\midrule
+\endhead
+\begin{minipage}[t]{0.22\columnwidth}\raggedright
+RCADS--P\strut
+\end{minipage} & \begin{minipage}[t]{0.27\columnwidth}\raggedright
+Revised Children's Anxiety and Depression Scale--Parent Proxy\strut
+\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
+This 47 item questionnaire contains subscales of separation anxiety disorder, social phobia, panic disorder, low mood, obsessive compulsive disorder, and generalized anxiety disorder. The scale asks participants to rate how often their child experiences each item.\strut
+\end{minipage} & \begin{minipage}[t]{0.18\columnwidth}\raggedright
+(Chorpita et al., 2000)\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.22\columnwidth}\raggedright
+STAI\strut
+\end{minipage} & \begin{minipage}[t]{0.27\columnwidth}\raggedright
+State-Trait Anxiety Inventory-Parent Self-Report\strut
+\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
+This Inventory contains two blocks, 20 items detailing state anxiety and 20 items detailing trait anxiety. The inventory asks participants to rate how often they feel each item, in either the context of general feelings or how the participant feels currently, to assess both state and trait anxiety.\strut
+\end{minipage} & \begin{minipage}[t]{0.18\columnwidth}\raggedright
+(Spielberger et al., 1983)\strut
+\end{minipage}\tabularnewline
+\bottomrule
+\end{longtable}
+
+\hypertarget{early-life-stress}{%
+\subsection{Early Life Stress}\label{early-life-stress}}
+
+\begin{longtable}[]{@{}llll@{}}
+\toprule
+\begin{minipage}[b]{0.22\columnwidth}\raggedright
+Title\strut
+\end{minipage} & \begin{minipage}[b]{0.27\columnwidth}\raggedright
+Name\strut
+\end{minipage} & \begin{minipage}[b]{0.22\columnwidth}\raggedright
+Description\strut
+\end{minipage} & \begin{minipage}[b]{0.18\columnwidth}\raggedright
+Reference\strut
+\end{minipage}\tabularnewline
+\midrule
+\endhead
+\begin{minipage}[t]{0.22\columnwidth}\raggedright
+TESI-PRR\strut
+\end{minipage} & \begin{minipage}[t]{0.27\columnwidth}\raggedright
+Traumatic Events Screening Inventory - Parent Report Revised\strut
+\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
+The TESI-PRR assesses a child's/adolescent's experience of a variety of potential traumatic events including previous injuries, hospitalizations, domestic violence, community violence, disasters, accidents, abuse.\strut
+\end{minipage} & \begin{minipage}[t]{0.18\columnwidth}\raggedright
+(Ghosh-Ippen et al., 2002)\strut
+\end{minipage}\tabularnewline
+\bottomrule
+\end{longtable}
+
+\hypertarget{fear}{%
+\subsection{Fear}\label{fear}}
+
+\begin{longtable}[]{@{}llll@{}}
+\toprule
+\begin{minipage}[b]{0.22\columnwidth}\raggedright
+Title\strut
+\end{minipage} & \begin{minipage}[b]{0.27\columnwidth}\raggedright
+Name\strut
+\end{minipage} & \begin{minipage}[b]{0.22\columnwidth}\raggedright
+Description\strut
+\end{minipage} & \begin{minipage}[b]{0.18\columnwidth}\raggedright
+Reference\strut
+\end{minipage}\tabularnewline
+\midrule
+\endhead
+\begin{minipage}[t]{0.22\columnwidth}\raggedright
+FIVE-Parent Report\strut
+\end{minipage} & \begin{minipage}[t]{0.27\columnwidth}\raggedright
+Fear of Illness and Virus Evaluation- Parent Proxy Report\strut
+\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
+This is a 35-item parent report questionnaire constructed to measure child fear of illness and virus. This questionnaire lists items related to fears about contamination, illness, and social distancing, and behaviors and impacts related to these illness and virus fears and asks participants to rate on a scale of 1-4 how often they are afraid of each item within the last week.\strut
+\end{minipage} & \begin{minipage}[t]{0.18\columnwidth}\raggedright
+(Ehrenreich-May, 2020)\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.22\columnwidth}\raggedright
+FIVE- Adult Report\strut
+\end{minipage} & \begin{minipage}[t]{0.27\columnwidth}\raggedright
+Fear of Illness and Virus Evaluation- Parent Self-Report\strut
+\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
+This is a 35-item parent report questionnaire constructed to measure adult fear of illness and virus. This questionnaire lists items related to fears about contamination, illness, and social distancing, and behaviors and impacts related to these illness and virus fears and asks participants to rate on a scale of 1-4 how often they are afraid of each item within the last week.\strut
+\end{minipage} & \begin{minipage}[t]{0.18\columnwidth}\raggedright
+(Ehrenreich-May, 2020)\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.22\columnwidth}\raggedright
+GMF-PR\strut
+\end{minipage} & \begin{minipage}[t]{0.27\columnwidth}\raggedright
+General Medical Fears Questionnaire- Parent Proxy Report\strut
+\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
+This 7-item questionnaire is designed to evaluate child general medical fear. The measure asks participants to rate each item on a scale of 1-3 how much they fear each item.\strut
+\end{minipage} & \begin{minipage}[t]{0.18\columnwidth}\raggedright
+Made by BABLab; adapted from the Revised Fear Survey Schedule for Children (FSSC-R) (Ollendick, 1983)\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.22\columnwidth}\raggedright
+GMF-SR\strut
+\end{minipage} & \begin{minipage}[t]{0.27\columnwidth}\raggedright
+General Medical Fears Questionnaire- Parent Self-Report\strut
+\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
+This 7-item questionnaire is designed to evaluate parent general medical fear. The measure asks participants to rate each item on a scale of 1-3 how much they fear each item.\strut
+\end{minipage} & \begin{minipage}[t]{0.18\columnwidth}\raggedright
+Made by BABLab; adapted from the FSSC-R (Ollendick, 1983)\strut
+\end{minipage}\tabularnewline
+\bottomrule
+\end{longtable}
+
+\hypertarget{parent-child-relationship}{%
+\subsection{Parent-Child Relationship}\label{parent-child-relationship}}
+
+\begin{longtable}[]{@{}llll@{}}
+\toprule
+\begin{minipage}[b]{0.22\columnwidth}\raggedright
+Title\strut
+\end{minipage} & \begin{minipage}[b]{0.27\columnwidth}\raggedright
+Name\strut
+\end{minipage} & \begin{minipage}[b]{0.22\columnwidth}\raggedright
+Description\strut
+\end{minipage} & \begin{minipage}[b]{0.18\columnwidth}\raggedright
+Reference\strut
+\end{minipage}\tabularnewline
+\midrule
+\endhead
+\begin{minipage}[t]{0.22\columnwidth}\raggedright
+PCRQ\strut
+\end{minipage} & \begin{minipage}[t]{0.27\columnwidth}\raggedright
+Parent Child Relationship Questionnaire- Parent Report Form\strut
+\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
+This is a 27-item questionnaire designed to measure the quality and security of the parent and child relationship. The questionnaire asks participants to rate on a scale of 1-5 how much each statement applies to him/her.\strut
+\end{minipage} & \begin{minipage}[t]{0.18\columnwidth}\raggedright
+Made by BABLab; adapted from the Emotional Availability Self Report (Biringen et al., 1998), Network of Relationships Inventory (Furman \& Buhrmester, 2009), Parental Reflective Functioning Questionnaire (Luyten, et al., 2017), Parent Emotion Regulation Scale (Pereira et al., 2017), Child Parent Relationship Scale (Pianta, 1992), and the Attachment Q-Sort Observational Measure (Waters \& Deane, 1985)\strut
+\end{minipage}\tabularnewline
+\bottomrule
+\end{longtable}
+
+\hypertarget{parental-buffering}{%
+\subsection{Parental Buffering}\label{parental-buffering}}
+
+\begin{longtable}[]{@{}llll@{}}
+\toprule
+\begin{minipage}[b]{0.22\columnwidth}\raggedright
+Title\strut
+\end{minipage} & \begin{minipage}[b]{0.27\columnwidth}\raggedright
+Name\strut
+\end{minipage} & \begin{minipage}[b]{0.22\columnwidth}\raggedright
+Description\strut
+\end{minipage} & \begin{minipage}[b]{0.18\columnwidth}\raggedright
+Reference\strut
+\end{minipage}\tabularnewline
+\midrule
+\endhead
+\begin{minipage}[t]{0.22\columnwidth}\raggedright
+PBQ\strut
+\end{minipage} & \begin{minipage}[t]{0.27\columnwidth}\raggedright
+Parental Buffering Questionnaire- Parent Report Form\strut
+\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
+This questionnaire contains three blocks to assess parental buffering in child stress. The first block contains 6 items to assess parental belief in being effective buffers, prompting participants to rate on a scale of 1-7 to which they agree or disagree. The second block contains 15 items of buffering actions, with a scale of 1-7 measuring how often these actions occur and a scale of 1- 6 measuring effectiveness of each action. The third block contains a qualitative response about parent buffering of child stress.\strut
+\end{minipage} & \begin{minipage}[t]{0.18\columnwidth}\raggedright
+Made by BABLab; adapted from the Early Intervention Parenting Self-Efficacy Scale (Guimond et al., 2008), CASPE-Parent (Lacouceur, 2020), PERS (Pereira et al., 2017), and the Modified KIDCOPE (Pfiefer \& Lewis, 2020)\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.22\columnwidth}\raggedright
+BIQ\strut
+\end{minipage} & \begin{minipage}[t]{0.27\columnwidth}\raggedright
+Buffering Information Questionnaire- Parent Proxy Form\strut
+\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
+This 2 item questionnaire assesses whether parents feel they have access to adequate information to support their child's psychological health during COVID-19 and the sources of this information.\strut
+\end{minipage} & \begin{minipage}[t]{0.18\columnwidth}\raggedright
+Made by BABLab\strut
+\end{minipage}\tabularnewline
+\bottomrule
+\end{longtable}
+
+\hypertarget{parenting-stress}{%
+\subsection{Parenting Stress}\label{parenting-stress}}
+
+\begin{longtable}[]{@{}llll@{}}
+\toprule
+\begin{minipage}[b]{0.22\columnwidth}\raggedright
+Title\strut
+\end{minipage} & \begin{minipage}[b]{0.27\columnwidth}\raggedright
+Name\strut
+\end{minipage} & \begin{minipage}[b]{0.22\columnwidth}\raggedright
+Description\strut
+\end{minipage} & \begin{minipage}[b]{0.18\columnwidth}\raggedright
+Reference\strut
+\end{minipage}\tabularnewline
+\midrule
+\endhead
+\begin{minipage}[t]{0.22\columnwidth}\raggedright
+PSCQ\strut
+\end{minipage} & \begin{minipage}[t]{0.27\columnwidth}\raggedright
+Parenting Stress Covid-19 Questionnaire - Parent Report Form\strut
+\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
+his questionnaire consists of two blocks, separating the evaluation of parental stress prior to COVID-19 with 4 items, and during COVID-19 with 6 items. The questionnaire asks participants to rate on a scale of 1-5 how much they agree with each item related to parental stress.\strut
+\end{minipage} & \begin{minipage}[t]{0.18\columnwidth}\raggedright
+Made by BABLab; adapted from the Parental Stress Scale (Berry \& Jones, 1995), COVID-19 Adolescent Symptom \& Psychological Experience Questionnaire- Parent (Ladouceur, 2020), and the Adolescent Social Connection \& Coping During COVID-19 Questionnaire (Pfiefer, 2020)\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.22\columnwidth}\raggedright
+RDAS\strut
+\end{minipage} & \begin{minipage}[t]{0.27\columnwidth}\raggedright
+Revised Dyadic Adjustment Scale\strut
+\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
+Used to assess the quality of the parents' relationship (if applicable). 14-item self report questionnaire that assesses seven dimensions of couple relationships within three overarching categories including ``Consensus'' in decision making, values and affection, ``Satisfaction'' in the relationship with respect to stability and conflict regulation, and ``Cohesion'' as seen through activities and discussion. Respondents rate certain aspects of their relationship on a 5 or 6 point scale.\strut
+\end{minipage} & \begin{minipage}[t]{0.18\columnwidth}\raggedright
+(Busby et al., 1995)\strut
+\end{minipage}\tabularnewline
+\bottomrule
+\end{longtable}
+
+\hypertarget{sleep-habits}{%
+\subsection{Sleep Habits}\label{sleep-habits}}
+
+\begin{longtable}[]{@{}llll@{}}
+\toprule
+\begin{minipage}[b]{0.22\columnwidth}\raggedright
+Title\strut
+\end{minipage} & \begin{minipage}[b]{0.27\columnwidth}\raggedright
+Name\strut
+\end{minipage} & \begin{minipage}[b]{0.22\columnwidth}\raggedright
+Description\strut
+\end{minipage} & \begin{minipage}[b]{0.18\columnwidth}\raggedright
+Reference\strut
+\end{minipage}\tabularnewline
+\midrule
+\endhead
+\begin{minipage}[t]{0.22\columnwidth}\raggedright
+ASHQ\strut
+\end{minipage} & \begin{minipage}[t]{0.27\columnwidth}\raggedright
+Adolescent Sleep Habits Questionnaire- Parent Proxy Form\strut
+\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
+This 54 item parent-rated questionnaire assesses behaviors most commonly associated with sleep difficulties in adolescents. This questionnaire focuses on the frequency of such sleep behaviors within the previous two weeks.\strut
+\end{minipage} & \begin{minipage}[t]{0.18\columnwidth}\raggedright
+(Grant, 2005)\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.22\columnwidth}\raggedright
+CSHQ\strut
+\end{minipage} & \begin{minipage}[t]{0.27\columnwidth}\raggedright
+Child Sleep Habits Questionnaire- Parent Proxy Form\strut
+\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
+This 45 item parent-rated questionnaire assesses behaviors most commonly associated with sleep difficulties in children. This questionnaire focuses on the frequency of such sleep behaviors during the most recent week.\strut
+\end{minipage} & \begin{minipage}[t]{0.18\columnwidth}\raggedright
+(Owens et al., 2000)\strut
+\end{minipage}\tabularnewline
+\bottomrule
+\end{longtable}
+
+\hypertarget{threat-information}{%
+\subsection{Threat Information}\label{threat-information}}
+
+\begin{longtable}[]{@{}llll@{}}
+\toprule
+\begin{minipage}[b]{0.22\columnwidth}\raggedright
+Title\strut
+\end{minipage} & \begin{minipage}[b]{0.27\columnwidth}\raggedright
+Name\strut
+\end{minipage} & \begin{minipage}[b]{0.22\columnwidth}\raggedright
+Description\strut
+\end{minipage} & \begin{minipage}[b]{0.18\columnwidth}\raggedright
+Reference\strut
+\end{minipage}\tabularnewline
+\midrule
+\endhead
+\begin{minipage}[t]{0.22\columnwidth}\raggedright
+SICS\strut
+\end{minipage} & \begin{minipage}[t]{0.27\columnwidth}\raggedright
+Sources of Information about COVID-19 Scale- Parent Proxy Report\strut
+\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
+his 9-item questionnaire is designed to evaluate the sources of information in which children are receiving about COVID-19. The scale lists items related to parent threat information, media, school, friends and asks participants to rate on a scale of 1-5 how true each item about the source of information their child receives.\strut
+\end{minipage} & \begin{minipage}[t]{0.18\columnwidth}\raggedright
+Made by BABLab; adapted from the Sources of Information about Swine Flu Scale (Remmerswaal \& Muris, 2011)\strut
+\end{minipage}\tabularnewline
+\bottomrule
+\end{longtable}
 
 \bibliography{book.bib,packages.bib,ref.bib}
 
