--- a/docs/parenting_under_pressure.tex
+++ b/docs/parenting_under_pressure.tex
@@ -457,6 +457,9 @@ Made by BABLab; adapted from the Sources of Information about Swine Flu Scale (R
 \bottomrule
 \end{longtable}
 
+\hypertarget{procedure}{%
+\section{Procedure}\label{procedure}}
+
 \bibliography{book.bib,packages.bib,ref.bib}
 
 \end{document}
